--- a/hospital-backend-jenkins/pom.xml
+++ b/hospital-backend-jenkins/pom.xml
@@ -95,7 +95,7 @@
 
 
   <build>
-  <finalName>springbootlibraryapi</finalName>
+  <finalName>springboothospitalapi</finalName>
     <plugins>
       <!-- Maven Plugin for WAR packaging -->
       <plugin>
